--- a/index.html
+++ b/index.html
@@ -48,22 +48,84 @@
             <section id="one">
                 <h1>About Me</h1>
                 <p>A brief paragraph introducing who you are, your profession, and what you specialize in.</p>
-                <img src="photo1.webp" alt="photo1">
+                <div class="card">
+                    <img src="images/img1.webp" alt="photo1">
+                    <div class="card-content">
+                        <h3>Subheading</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/img2.webp" alt="photo1">
+                    <div class="card-content">
+                        <h3>Subheading</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
+                    </div>
+                </div>
             </section>
             <section id="two">
                 <h1>Career Goals</h1>
                 <p>A statement of your career vision or a quote that inspires you professionally.</p>
                 <p>Goals List: Short-term and long-term professional goals.</p>
+                <div class="card">
+                    <img src="images/img3.webp" alt="photo1">
+                    <div class="card-content">
+                        <h3>Subheading</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/img4.webp" alt="photo1">
+                    <div class="card-content">
+                        <h3>Subheading</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
+                    </div>
+                </div>
             </section>
             <section id="three">
                 <h1>Tech Stack</h1>
                 <p>Skills Matrix: A visual representation (could be icons or a simple list) of technologies you are proficient in, such as programming languages, frameworks, and tools.</p>
                 <p>Learning Path: Brief mention of technologies you're currently learning or plan to learn.</p>
+                <div class="card">
+                    <img src="images/img5.webp" alt="photo1">
+                    <div class="card-content">
+                        <h3>Subheading</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/img6.webp" alt="photo1">
+                    <div class="card-content">
+                        <h3>Subheading</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
+                    </div>
+                </div>
             </section>
             <section id="four">
                 <h1>My Work</h1>
                 <p>Portfolio Pieces: Thumbnails linking to detailed case studies or live projects.</p>
                 <p>Description: A short description of each project, the challenges faced, and the solutions implemented.</p>
+                <div class="card">
+                    <img src="images/img7.webp" alt="photo1">
+                    <div class="card-content">
+                        <h3>Subheading</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/img8.webp" alt="photo1">
+                    <div class="card-content">
+                        <h3>Subheading</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/img9.webp" alt="photo1">
+                    <div class="card-content">
+                        <h3>Subheading</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
+                    </div>
+                </div>
             </section>
             <section id="five">
                 <h1>Contact</h1>
