--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
                 <div class="card">
                     <img src="images/img1.webp" alt="photo1">
                     <div class="card-content">
-                        <h3>Subheading</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
+                        <h3>UVU</h3>
+                        <p>I'm currently a student at Utah Valley University. I'm in between being a Sophomore and a Junior.</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="images/img2.webp" alt="photo1">
                     <div class="card-content">
-                        <h3>Subheading</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
+                        <h3>Utah</h3>
+                        <p>I'm from Utah and I wouldn't mind leaving.</p>
                     </div>
                 </div>
             </section>
@@ -70,15 +70,8 @@
                 <div class="card">
                     <img src="images/img3.webp" alt="photo1">
                     <div class="card-content">
-                        <h3>Subheading</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="images/img4.webp" alt="photo1">
-                    <div class="card-content">
-                        <h3>Subheading</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
+                        <h3>Graduate</h3>
+                        <p>My main goal is to learn as much as I can here at UVU and to graduate with opportunities.</p>
                     </div>
                 </div>
             </section>
@@ -108,21 +101,21 @@
                 <div class="card">
                     <img src="images/img7.webp" alt="photo1">
                     <div class="card-content">
-                        <h3>Subheading</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
+                        <h3><a href="#">Project 1</a></h3>
+                        <p>When I eventually know what should be included in my Portfolio, my work will be listed here.</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="images/img8.webp" alt="photo1">
                     <div class="card-content">
-                        <h3>Subheading</h3>
+                        <h3><a href="#">Project 2</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="images/img9.webp" alt="photo1">
                     <div class="card-content">
-                        <h3>Subheading</h3>
+                        <h3><a href="#">Project 3</a></h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
                     </div>
                 </div>
