--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <div id="navWrapper">
         <nav>
         <ul>
-            <li class="active"><a href="#one"><img src="images/about.png"><span>About Me</span></a></li>
-            <li><a href="#two"><img src="images/goals.png"><span>Career Goals</span></a></li>
-            <li><a href="#three"><img src="images/tech.png"><span>Tech Stack</span></a></li>
-            <li><a href="#four"><img src="images/work.png"><span>My Work</span></a></li>
-            <li><a href="#five"><img src="images/contact.png"><span>Contact</span></a></li>
+            <li class="active"><a href="#one"><img src="images/about.png" alt="about"><span>About Me</span></a></li>
+            <li><a href="#two"><img src="images/goals.png"alt="goals"><span>Career Goals</span></a></li>
+            <li><a href="#three"><img src="images/tech.png"alt="tech"><span>Tech Stack</span></a></li>
+            <li><a href="#four"><img src="images/work.png"alt="work"><span>My Work</span></a></li>
+            <li><a href="#five"><img src="images/contact.png"alt="contact"><span>Contact</span></a></li>
         </ul>
         </nav>
     </div>
